--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "the bot.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Jay Welsh",
   "license": "MIT",
