--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "the bot.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "pm2-start": "sh scripts/pm2-start.sh"
   },
   "author": "Jay Welsh",
   "license": "MIT",
   "dependencies": {
+    "@kikinteractive/kik": "^2.2.1",
     "bufferutil": "^3.0.5",
     "discord.js": "^11.3.2",
     "erlpack": "^0.1.2",
     "gfycat-sdk": "^1.4.16",
+    "pm2": "^3.0.4",
     "uws": "^10.148.1"
   },
   "devDependencies": {
